--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="app_name">Keyboard Scrambler</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_hard_level">HardLevel</string>
+    <string name="title_activity_hard_level">Keyboard Scrambler Hard Level</string>
     <string name="title_activity_home_screen">HomeScreen</string>
+    <string name="title_activity_medium_level">Keyboard Scrambler Medium Level</string>
     <string name="title_activity_splash">SplashActivity</string>
-    <string name="title_activity_easy__level">Easy_Level</string>
+    <string name="title_activity_easy__level">Keyboard Scrambler Easy Level</string>
 
 </resources>
