--- a/keyboardscrambler/src/main/res/values/strings.xml
+++ b/keyboardscrambler/src/main/res/values/strings.xml
@@ -4,11 +4,12 @@
     <string name="app_name">Keyboard Scrambler</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_hard_level">Keyboard Scrambler Hard Level</string>
-    <string name="title_activity_home_screen">HomeScreen</string>
-    <string name="title_activity_medium_level">Keyboard Scrambler Medium Level</string>
-    <string name="title_activity_splash">SplashActivity</string>
-    <string name="title_activity_easy__level">Keyboard Scrambler Easy Level</string>
-    <string name="title_activity_dvorak__level">Dvorak_Level</string>
 
+    <string name="title_activity_home_screen">HomeScreen</string>
+    <string name="title_activity_splash">SplashActivity</string>
+
+    <string name="title_activity_easy__level">Keyboard Scrambler Easy Level</string>
+    <string name="title_activity_medium_level">Keyboard Scrambler Medium Level</string>
+    <string name="title_activity_hard_level">Keyboard Scrambler Hard Level</string>
+    <string name="title_activity_dvorak__level">Keyboard Scrambler Dvorak Level</string>
 </resources>
